# jitter-lite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
packaging/macos/: Info.plist  bundle.sh
src/: main.rs
