[package]
name = "jitter"
version = "0.4.0"
edition = "2021"

[dependencies]
enigo       = "0.6"
chrono      = "0.4"
auto-launch = "0.5"
ctrlc       = "3"
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
tao         = "0.31"     # event loop; inits GTK on Linux
tray-icon   = "0.21"     # tray icon + menu (re-exports muda)
# If a version won't resolve, run e.g. `cargo add tao tray-icon`.

# macOS uses a native CoreGraphics call for idle time (see src/main.rs), so
# `user-idle` (which needs D-Bus and has no real macOS path) is excluded there.
[target.'cfg(not(target_os = "macos"))'.dependencies]
user-idle = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
